--- a/Ecommerce/src/app/header/nav/nav.component.html
+++ b/Ecommerce/src/app/header/nav/nav.component.html
@@ -8,7 +8,7 @@
       <a class="nav-link" (click)="goTo('/contact')" >Contact</a>
     </li>
     <li class="nav-item ">
-      <a class="nav-link" (click)="goTo('/categorie/Promotion')" >Promo</a>
+      <a class="nav-link" (click)="goTo('/categorie/Promotion')" >Promotion</a>
     </li>
    <!-- <li *ngIf="isAdmin && islogged" class="nav-item ">
       <a class="nav-link" (click)="goTo('/op_produit')">Opération</a>
@@ -23,7 +23,7 @@
   </div>
   
 <nav class="navbar navbar-expand-sm bg-light justify-content-center mt-5">
-  <a class="navbar-brand mx-3 " routerLink="/produit"><img class="logo" src="./../../../assets/img/LogoMakr-5umAFL.png" alt="logo"></a>
+  <a class="navbar-brand mx-3 " routerLink="/produit"><img class="logo" src="{{logo}}" alt="logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
