--- a/Ecommerce/src/app/header/nav/nav.component.scss
+++ b/Ecommerce/src/app/header/nav/nav.component.scss
@@ -8,3 +8,16 @@
 a{
 color:#fff;
 }
+
+@media (min-width:250px){
+  .navbars{
+    position: relative;
+    margin-top: 5rem;
+  }
+}
+@media (min-width:750px){
+  .navbars{
+    position: relative;    
+    margin-top: 41px;
+  }
+}
