--- a/Ecommerce/src/app/header/search/modal.component.html
+++ b/Ecommerce/src/app/header/search/modal.component.html
@@ -4,13 +4,14 @@
 </div>
 <div class="modal-body">
 
+  <div class="row m-1" *ngIf="data.produit.length < 1">
+    <p>Désolé, aucun produit ne correspond à ce nom !</p>
+
+  </div>
   <ng-container *ngFor="let p of data.produit; let i = index">
 
-    <div class="row m-1" *ngIf="!p.name">
-      <p>Désolé, aucun produit ne correspond à ce nom !</p>
-
-    </div>
-    <div class="row m-1 box" *ngIf="p.name">
+    
+    <div class="row m-1 box" *ngIf="data.produit.length != 0">
       <div class="col-sm-4"><img src="{{p.photo}}" alt="...">
         <div *ngIf="p.discount != 0" class="promotion">-{{p.discount}}%</div>
       </div>
