--- a/Ecommerce/src/app/header/nav/nav.component.html
+++ b/Ecommerce/src/app/header/nav/nav.component.html
@@ -13,7 +13,7 @@
    <!-- <li *ngIf="isAdmin && islogged" class="nav-item ">
       <a class="nav-link" (click)="goTo('/op_produit')">Opération</a>
     </li>-->
-    <li *ngIf="isAdmin && islogged" class="nav-item ">
+    <li *ngIf="isAdmin && isloggued" class="nav-item ">
       <a class="nav-link" (click)="goTo('/admin')">Administration</a>
     </li>
  
@@ -39,11 +39,13 @@
        </ul>
 
   
-    <button *ngIf="islogged" class="btn btn-outline-danger me-2 btn-sm" (click)="logout()" type="submit">Logout</button>
-  <!--  <button *ngIf="!islogged" class="btn btn-outline-primary me-2 " (click)="openModallogin()" type="submit">LogIn</button>-->
-    <button type="button" *ngIf="!islogged" class="btn btn-outline-secondary btn-sm me-2" data-toggle="modal" data-target="#myModal">
-      Login
+    <button *ngIf="isloggued" class="btn btn-outline-danger me-2 btn-sm" (click)="logout()" type="submit">
+      Logout
     </button>
+   <button *ngIf="!isloggued" class="btn btn-outline-primary me-2 " (click)="login()" type="submit">LogIn</button>
+   <!--  <button type="button" *ngIf="!islogged" class="btn btn-outline-secondary btn-sm me-2" data-toggle="modal" data-target="#myModal">
+      Login
+    </button> -->
     <button mat-mini-fab color="accent" routerLink="panier" type="submit"><mat-icon>shopping_cart</mat-icon></button>
   
   </div>  
