--- a/Ecommerce/src/app/auth/login/login.component.html
+++ b/Ecommerce/src/app/auth/login/login.component.html
@@ -1,9 +1,9 @@
  <!-- The Modal -->
  
         <!-- Modal Header -->
-        <div class="modal-header">
+        <div class="modal-header mb-3">
           <h4 class="modal-title">Login</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button type="button" class="close" (click)="close()" data-dismiss="modal">&times;</button>
         </div>
         
         <!-- Modal body -->
@@ -25,8 +25,8 @@
         
         <!-- Modal footer -->
         <div class="modal-footer">
-         <!-- <button type="button" class="btn btn-succes me-5" data-dismiss="modal">Enregistrer</button>-->
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-succes me-5" (click)="inscription()" data-dismiss="modal">S'inscrire</button>
+          <button type="button" class="btn btn-danger" (click)="close()" data-dismiss="modal">Close</button>
         </div>
         
     
