--- a/Ecommerce/src/app/auth/login/login.component.scss
+++ b/Ecommerce/src/app/auth/login/login.component.scss
@@ -1,10 +1,9 @@
 :host {
-  max-width: 40rem;
-  max-height: 30rem;
-  min-width: 22rem;
-  min-height: 15rem;
+  width: 100%;
+  min-width: 50vw;
+  min-height: 20vh;
   display: block;
-  padding: 15px;
+  padding: 20px;
   background-color: #fff;
-  border-radius: 5%;
+  border-radius: 3%;
 }
