--- a/Ecommerce/src/app/auth/register/register.component.html
+++ b/Ecommerce/src/app/auth/register/register.component.html
@@ -1,57 +1,134 @@
-<div class="class" *ngIf="isConnected">
-  <div class="modal-header">
-    <h4 class="modal-title">S'enregistrer</h4>
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
-  </div>
-
-  <form>
-    <div class="modal-body">
-      <ng-container >
-        <div class="input-group">
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" value="{{client.email}}"
-              placeholder="name@example.com">
-            <label for="floatingInput">Email</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="tel" class="form-control" id="floatingtel" value="{{client.tel}}" placeholder="Téléphone">
-            <label for="floatingtel">Téléphone</label>
-          </div>
-        </div>
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingAdresse" value="{{client.adresse}}" placeholder="Adresse">
-          <label for="floatingAdresse">Adresse</label>
-        </div>
+<!--<button mat-raised-button (click)="isEditable = !isEditable">
+  {{!isEditable ? 'Enable edit mode' : 'Disable edit mode'}}
+</button>
+-->
+<mat-stepper linear #stepper>
+  <mat-step [stepControl]="infoPersonnel" [editable]="isEditable">
+    <form [formGroup]="infoPersonnel">
+      <ng-template matStepLabel>Info personnel</ng-template>
 
 
-        <div class="input-group">
-          <div class="form-floating mb-3 w-50">
-            <input type="text" class="form-control" id="floatingville" value="{{client.ville}}" placeholder="ville">
-            <label for="floatingville">Ville</label>
-          </div>
-          <div class="form-floating mb-3 w-50">
-            <input type="text" class="form-control" id="floatingcodepostal" value="{{client.codepostal}}"
-              placeholder="code postal">
-            <label for="floatingcodepostal">Code Postal</label>
-          </div>
-          <div class="full" id="map"></div>
-        </div>
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingrefAdresse" value="{{client.reference}}"
-            placeholder="Réference Adresse">
-          <label for="floatingrefAdresse">Réference Adresse</label>
-        </div>
-      </ng-container>
+      <div class="infoPersonnel">
+        <mat-grid-list cols="2" rowHeight="85px">
+
+          <mat-grid-tile>
+            <mat-form-field appearance="fill">
+              <mat-label>Nom</mat-label>
+              <input matInput type="text" name="nom" required formControlName="nom">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="fill">
+              <mat-label>Email</mat-label>
+              <input matInput type="email" name="email" required formControlName="email">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="fill">
+              <mat-label>Password</mat-label>
+              <input matInput type="password" name="password" required formControlName="password">
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <mat-grid-tile>
+            <mat-form-field appearance="fill">
+              <mat-label>Tél</mat-label>
+              <input matInput type="tel" name="tel" formControlName="tel" required>
+            </mat-form-field>
+          </mat-grid-tile>
+          <!--   
+              <mat-grid-tile>
+       <mat-form-field appearance="fill">
+              <mat-label>Role</mat-label>
+              <input matInput type="text" name="role" formControlName="role" value="utilisateur">
+            </mat-form-field>
+          </mat-grid-tile>
+-->
+
+          <mat-grid-tile colspan="2">
+            <mat-form-field appearance="fill">
+              <mat-label>Adresse</mat-label>
+              <textarea matInput #messages maxlength="80" formControlName="adresse" required
+                placeholder="Ex. casablanca rue..." name="adresse"></textarea>
+              <mat-hint align="end">{{messages.value.length}} / 80</mat-hint>
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="fill">
+              <mat-label>Ville</mat-label>
+              <input matInput type="text" name="ville" formControlName="ville" required>
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="fill">
+              <mat-label>Code Postal</mat-label>
+              <input matInput type="text" name="codepostal" formControlName="codepostal" required>
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <mat-grid-tile colspan="2">
+            <mat-form-field appearance="fill">
+              <mat-label>Réference</mat-label>
+              <input matInput type="text" name="reference" formControlName="reference">
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <!--   <mat-grid-tile>
+            <mat-form-field appearance="fill">
+              <mat-label>Tél</mat-label>
+              <input matInput type="text" name="etat" formControlName="etat" value="off">
+            </mat-form-field>
+          </mat-grid-tile>
+        -->
+        </mat-grid-list>
+
+
+
+
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="infoPaiement" [editable]="isEditable">
+    <form [formGroup]="infoPaiement">
+      <ng-template matStepLabel>Mode de paiement</ng-template>
+      <mat-form-field appearance="fill">
+
+        <!--Mode de paiement-->
+        
+        <mat-label>Paiement par</mat-label>
+        <mat-select [(ngModel)]="paiement" name="modepaiement" formControlName="modepaiement">
+          <mat-option *ngFor="let mode of modePaiement" [disabled]="mode.etat" [value]="mode.name">
+            {{mode.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!--card credit-->
+
+
+
+
+
+
+
+      <div>
+        <button mat-button matStepperPrevious>Retour</button>
+        <button mat-button matStepperNext>Suivant</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Done</ng-template>
+    <p>You are now done.</p>
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
       <div class="modal-footer">
         <button type="button" class="btn btn-succes me-5" (click)="enregistrer()"
           data-dismiss="modal">Enregistrer</button><button type="button" class="btn btn-danger" (click)="close()"
           data-dismiss="modal">Close</button>
       </div>
     </div>
-  </form>
-</div>
-
-
-<div class="modal-body" *ngIf="!isConnected">
-  <app-login></app-login>
-</div>
+  </mat-step>
+</mat-stepper>
