--- a/Ecommerce/src/app/auth/register/register.component.scss
+++ b/Ecommerce/src/app/auth/register/register.component.scss
@@ -1,14 +1,28 @@
 :host {
   width: 100%;
+  height: 30rem;
   min-width: 50vw;
   min-height: 20vh;
   display: block;
   padding: 20px;
   background-color: #fff;
   border-radius: 3%;
-  overflow-y: scroll;
+  overflow: scroll;
 }
 .full {
   width: 30vw;
   height: 20vh;
+}
+
+.infoPersonnel{
+  width:100%;
+}
+.fill{
+  width: 100%;
+  min-width: none;
+}
+
+mat-form-field{
+  width:100%;
+  padding-left:5px;
 }
